# LIT-autonomous-research-pipeline

./: .gitignore  README.md
tasks/task_a_prediction_harness/: README.md  pyproject.toml
tasks/task_a_prediction_harness/src/prediction_harness/: __init__.py  api.py  calibration.py  cli.py  dao.py  errors.py  hashing.py  models.py  sqlite_dao.py
tasks/task_a_prediction_harness/tests/: conftest.py  test_calibration.py  test_cli.py  test_concurrency.py  test_extended_metrics.py  test_happy_path.py  test_hypothesis_stateful.py  test_immutability.py  test_temporal_ordering.py  test_validation_and_storage.py
tasks/task_b_adversarial_screen/: README.md  pyproject.toml
tasks/task_b_adversarial_screen/artifacts/: screener_bundle.joblib
tasks/task_b_adversarial_screen/configs/: aggregation.yaml  directionality.json
tasks/task_b_adversarial_screen/data/: adversarial.csv  benign.csv
tasks/task_b_adversarial_screen/reports/: evaluation_report.md
tasks/task_b_adversarial_screen/src/adversarial_screen/: __init__.py  aggregator.py  embeddings.py  models.py  screener.py  scripts_entry.py  training.py
tasks/task_b_adversarial_screen/src/adversarial_screen/detectors/: __init__.py  anomaly.py  classifier.py  directionality.py
tasks/task_b_adversarial_screen/tests/: conftest.py  test_aggregator.py  test_directionality.py  test_hypothesis_aggregator.py  test_production_features.py  test_screener_end_to_end.py
tasks/task_c_priority_scheduler/: README.md  pyproject.toml
tasks/task_c_priority_scheduler/configs/: priorities.yaml
tasks/task_c_priority_scheduler/results/: stress_audit.jsonl  stress_report.json  stress_sweep_report.json
tasks/task_c_priority_scheduler/src/priority_scheduler/: __init__.py  audit.py  models.py  runtime.py  scheduler.py  scripts_entry.py  stress.py  workload.py
tasks/task_c_priority_scheduler/tests/: conftest.py  test_hardening.py  test_preemption.py  test_scheduler_basic.py  test_stateful_properties.py  test_stress.py  test_stress_sweep.py  test_threaded_runtime.py
tasks/task_d_evidence_client/: README.md  pyproject.toml
tasks/task_d_evidence_client/src/evidence_client/: __init__.py  circuit_breaker.py  client.py  http.py  metrics.py  models.py  response_types.py
tasks/task_d_evidence_client/src/evidence_client/sources/: __init__.py  _base.py  clinical_trials.py  faers.py  nhanes.py  pubmed.py  string_db.py
tasks/task_d_evidence_client/tests/: _helpers.py  conftest.py  test_5xx_retry.py  test_circuit_breaker.py  test_clinical_trials.py  test_faers.py  test_http_layer.py  test_metrics.py  test_nhanes.py  test_pubmed.py  test_string_db.py  test_thread_safety.py  test_typed_responses.py
tasks/task_d_evidence_client/tests/cassettes/: test_ctg_fetch_by_id_returns_success.yaml  test_ctg_search_returns_success.yaml  test_faers_fetch_by_id.yaml  test_faers_search_returns_success.yaml  test_nhanes_fetch_by_id_returns_success.yaml  test_nhanes_search_returns_success.yaml  test_pubmed_fetch_by_id_returns_success.yaml  test_pubmed_search_returns_success.yaml  test_string_db_fetch_by_id_returns_success.yaml  test_string_db_search_returns_success.yaml
tasks/task_e_cohort_generator/: README.md  pyproject.toml
tasks/task_e_cohort_generator/examples/: cardiovascular_chf_like.json  metabolic_t2d_like.json  neurodegenerative_ad_like.json
tasks/task_e_cohort_generator/notebooks/: demo.ipynb
tasks/task_e_cohort_generator/src/cohort_generator/: __init__.py  cli.py  config.py  generator.py
tasks/task_e_cohort_generator/tests/: conftest.py  test_biomarker_profiles.py  test_chunks_and_hypothesis.py  test_cli_and_provenance.py  test_config_validation.py  test_missingness.py  test_statistical_properties.py
